@@ -13,6 +13,7 @@ apply plugin: 'elasticsearch.build'
 apply plugin: 'elasticsearch.publish'
 apply plugin: 'elasticsearch.embedded-providers'
 apply plugin: 'elasticsearch.mrjar'
+apply plugin: 'elasticsearch.internal-test-artifact'
 
 embeddedProviders {
   impl 'entitlement', project(':libs:entitlement:asm-provider')
@@ -27,6 +28,11 @@ dependencies {
     exclude group: 'org.elasticsearch', module: 'entitlement'
   }
 
+  testImplementation 'org.ow2.asm:asm:9.9'
+  testImplementation 'org.ow2.asm:asm-util:9.9'
+  testImplementation 'org.ow2.asm:asm-tree:9.9'
+  testImplementation 'org.ow2.asm:asm-analysis:9.9'
+
   // guarding for intellij
   if (sourceSets.findByName("main23")) {
     main23CompileOnly project(path: ':libs:entitlement:bridge', configuration: 'java23')
@@ -35,4 +41,47 @@ dependencies {
 
 tasks.withType(CheckForbiddenApisTask).configureEach {
   replaceSignatureFiles 'jdk-signatures'
+  exclude 'org/elasticsearch/entitlement/config/**.class'
+}
+
+tasks.named('javadoc') {
+  // Our configuration references all kinds of nasty internal types
+  exclude 'org/elasticsearch/entitlement/config/*'
+  // Explcitly include the main entrypoint, as it's referenced in EntitlementBoostrap
+  include 'org/elasticsearch/entitlement/config/MainInstrumentationProvider.java'
+}
+
+// We need to explicitly export these packages since we directly reference classes from them in our instrumentation config
+def exportedPackages = [
+  "jdk.jlink/jdk.tools.jlink.internal",
+  "jdk.internal.vm.ci/jdk.vm.ci.services",
+  "java.base/sun.net.www",
+  "java.base/sun.net.www.protocol.ftp",
+  "java.base/sun.net.www.protocol.file",
+  "java.base/sun.net.www.protocol.jar",
+  "java.base/sun.net.www.protocol.http",
+  "java.base/sun.net.www.protocol.https",
+  "java.base/sun.net.www.protocol.mailto",
+  "java.base/sun.nio.ch",
+  "java.base/jdk.internal.foreign",
+  "java.base/jdk.internal.foreign.abi",
+  "java.base/jdk.internal.foreign.layout",
+  "java.net.http/jdk.internal.net.http",
+  "jdk.jdi/com.sun.tools.jdi"
+]
+
+// invoke using ./gradlew :libs:entitlement:dumpInstrumentedMethods --args="<output file>"
+tasks.register('dumpInstrumentedMethods', JavaExec) {
+  classpath = sourceSets.test.runtimeClasspath
+  mainClass = 'org.elasticsearch.entitlement.initialization.DynamicInstrumentationUtils'
+  exportedPackages.each { jvmArgs("--add-opens", "${it}=ALL-UNNAMED")}
+}
+
+tasks.named('compileJava') {
+  options.release.unset()
+  exportedPackages.each { options.compilerArgs.addAll(["--add-exports", "${it}=org.elasticsearch.entitlement"])}
+}
+
+tasks.named('test') {
+  exportedPackages.each { jvmArgs("--add-opens", "${it}=ALL-UNNAMED")}
 }
